# raport_ewidencja

./: .gitignore  pyproject.toml  test_loader.py  test_normalizer.py  test_pdf_processing.py
src/raport_ewidencja/: __init__.py
src/raport_ewidencja/loader/: __init__.py  data_loader_pdf.py  data_normalizer.py  logger_config.py
src/raport_ewidencja/utils/: logging_utils.py
