[project]
name = "raport-ewidencja"
version = "0.1.0"
description = "Ewidencja ścieków, kod do przetwarzania danych i tworzenia raportów."
authors = [
    {name = "zdziebkowski",email = "wojciech.zdziebkowski@gmail.com"}
]
# readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "pdfplumber (>=0.11.5,<0.12.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
