[project]
name = "raport-ewidencja"
version = "0.1.0"
description = "Ewidencja ścieków, kod do przetwarzania danych i tworzenia raportów."
authors = [
    {name = "zdziebkowski",email = "wojciech.zdziebkowski@gmail.com"}
]
# readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "pdfplumber (>=0.11.5,<0.12.0)",
    "pyarrow (>=19.0.0,<20.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.1.1"
flake8 = "^7.0.0"
mypy = "^1.8.0"

[tool.black]
line-length = 88

[tool.mypy]
ignore_missing_imports = true

[tool.poetry]
packages = [
    { include = "raport_ewidencja", from = "src" }
]